# OMRChecker

./: .cursorignore  .dockerignore  .env.local  .gitignore  .pixel-agents-session.json  .pre-commit-config.yaml  .pylintrc  .ts-migration-exclude  404.html  AGENTS.md  AUTO_TEMPLATE_DETECTION.md  BUBBLES_FIELD_DETECTION_TEST_MAPPING.md  BUBBLES_THRESHOLD_MIGRATION_PLAN.md  BUBBLES_THRESHOLD_PORT_PROGRESS.md  CHANGE_PATTERNS.yaml  CHANGE_PROPAGATION_TOOL_ENHANCEMENTS.md  CHANGE_PROPAGATION_TOOL_VISUAL_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_UNUSED_FUNCTIONS.md  COMPLETE_SUCCESS_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  COVERAGE_AND_LINT_REPORT.md  CROP_PATCHES_ANALYSIS.md  Contributors.md  CurrDos.txt  DEBUG_UTILITIES_COMPLETE.md  DEMO_FIXES_OPENCV_FOLDER.md  DEMO_REFACTORING_PLAN.md  DEMO_TESTING_GUIDE.md  DEPENDENCY_MAPPING.md  DETECTION_TESTS_COMPLETE.md  DRY_IMPLEMENTATION_REPORT.md  DRY_IMPROVEMENTS_SUMMARY.md  DetailedDos.md  DetailedDos.txt  Dockerfile  E2E_TEST_RENEWAL.md  EVALUATION_PORTING_COMPLETE.md  (+146 more)
.agents/: AGENTS.md  CLEANUP_PLAN.md  SUBAGENT_BRIEFING.md  SUBAGENT_TASKS.md  TEST_MIGRATION_INSTRUCTIONS.md  subagent_test_prompt.md
.agents/migration-toolkit/: 1-setup-project.sh  2-generate-interfaces.js  3-generate-tests.js  4-migrate-files.js  MANUAL_IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  WHY_SO_FAST.md  opencv-js-patterns.md  package-lock.json  package.json
.beads/: .gitignore  README.md  config.yaml  metadata.json
.beads/hooks/: on_close  on_create  on_update  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pre-commit.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  (+6 more)
BRIGHTNESS SAMPLES/: information.md
OMRDos/: OMR test.ipynb  omrDos.py  omrDos.spec  omrfunctions,py
change-propagation-tool/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
codebase-docgen/: Readme.md  dashboard.py
config/: config_loader.py  default_config.yaml
docs/: AUTO_SYNC_WORKFLOW.md  BEADS_AGENT_WORKFLOW.md  BEADS_DEPENDENCY_GUIDE.md  BEADS_SETUP_RESOLUTION.md  CropOnLogo-guide.md  DIFF_PLAN_IMAGE_PROCESSORS.md  For Contributors.md  Home.md  MIGRATION_ORCHESTRATION.md  MIGRATION_VALIDATION_SUMMARY.md  Organization.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_REDO_STATUS.md  PYTHON_TS_DIFFERENCES.md  SCRIPT_VALIDATION_REPORT.md  SESSION_HANDOFF.md  TESTING_STRATEGY.md  TESTING_STRATEGY_REVISED.md  TESTING_TASKS_BREAKDOWN.md  TODOs.md  [v1]-About-Templates.md  [v1]-Diagrams.md  [v1]-Rich Visuals.md  [v1]-User-Guide.md  [v2]-About-Config.md  [v2]-About-Evaluation.md  [v2]-About-Templates.md  index.md  react-migration-guide.md  virtual-environment-setup.md  workflow-visualization.md
examples/: __init__.py  workflow_visualization_examples.py
extensions/: CropOnMarkers.py  CropPage  CropPage.py  FeatureBasedAlignment.py  Levels.py  Markers.py  builtins.py
inputs/: J_template.json  omr_marker.jpg.bk
mini_scripts/: _bk.py  align.py  barplotTHR.py  blur_names.py  check_hist.py  homography.py  make_gif.py  mergeCSVsresults.py  mv.py  normalize_hist.py  ranking.py  resize_images.py  tiftojpg.py  unit_testing.py  utils.bk.py
omrchecker-js/: .eslintrc.cjs  .gitignore  IMPLEMENTATION_CHECKLIST.md  README.md  TYPESCRIPT_1TO1_MAPPING.md  TYPESCRIPT_PORT_PHASE1_COMPLETE.md  TYPESCRIPT_PORT_PHASE2_COMPLETE.md  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: __init__.py  batch_migrate.py  convert_images_hook.py  convert_schema_keys.py  demo_visualization.sh  detect_python_changes.py  fix_all_camelcase.py  fix_camelcase_accesses.py  generate_parity_fixtures.py  generate_ts_suggestions.py  migrate_beads_to_nodb.sh  migrate_jsons_to_camelcase.py  migration_tasks.py  resize_images_hook.py  run_all_tests_and_coverage.sh  run_coverage.sh  run_hook.sh  run_python_hook.sh  run_single_test.sh  sync_tool.py  sync_ts_from_python.py  test_option_c.sh  validate_migrations.py  validate_ts_migration.py  verify-file-mapping.js
src/: H_template.json  J_template.json  __init__.py  align.py  config.py  constants.py  core.py  entry.py  evaluation.py  logger.py  main.py  parameters list  template.py  template2.py  todorough  unit_testing.py  utils.py
web-ui/: .env.local.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json
workflow-viz-app/: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+972 files in other folders)
