[project]
name = "OMRChecker"
version = "1.0.0"
description = "Evaluate OMR sheets fast and accurately using a scanner 🖨 or your phone 🤳."

authors = [{ name = "udayraj123", email = "udayrajdeshmukh7@gmail.com" }]
maintainers = [{ name = "udayraj123", email = "udayrajdeshmukh7@gmail.com" }]

readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.11"
dependencies = [
    "deepmerge==1.1.1",
    "dotmap==1.3.30",
    "easyocr==1.7.1",
    "jsonschema==4.21.1",
    "matplotlib==3.8.4",
    "mike>=2.1.3",
    "numpy==1.26.4",
    "opencv-contrib-python==4.9.0.80",
    "opencv-python==4.9.0.80",
    "pandas==2.2.3",
    "pyzbar==0.1.9",
    "rich-tools==0.5.1",
    "rich==13.8.0",
    "scipy==1.15.1",
    "screeninfo==0.8.1",
    "shapely==2.1.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.0",
    "flake8==7.0.0",
    "freezegun==1.4.0",
    "mkdocs-material>=9.5.50",
    "Pillow==11.1.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest-cov>=6.0.0",
    "pytest-mock==3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "syrupy==4.6.1",
]
