[project]
name = "OMRChecker"
version = "1.0.0"
description = "Evaluate OMR sheets fast and accurately using a scanner 🖨 or your phone 🤳."

authors = [{ name = "udayraj123", email = "udayrajdeshmukh7@gmail.com" }]
maintainers = [{ name = "udayraj123", email = "udayrajdeshmukh7@gmail.com" }]

readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.11"
dependencies = [
    "deepmerge==2.0",
    "dotmap==1.3.30",
    "jsonschema==4.25.0",
    "matplotlib==3.10.5",
    "mike>=2.1.3",
    "numpy==2.2.6",
    "opencv-contrib-python==4.12.0.88",
    "opencv-python==4.12.0.88",
    "pandas==2.3.1",
    "pyzbar==0.1.9",
    "rich==13.8.0",
    "scipy==1.15.1",
    "screeninfo==0.8.1",
    "shapely==2.1.1",
]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#optional-dependencies
[project.optional-dependencies]
easyocr = ["easyocr>=1.7.2"]
ml = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.0",
    "flake8==7.0.0",
    "freezegun>=1.4.0",
    "mkdocs-material==9.6.18",
    "Pillow==11.1.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.392.post0",
    "pytest-cov>=6.0.0",
    "pytest-mock==3.14.0",
    "pytest>=8.3.4",
    "qrcode>=8.0",
    "ruff>=0.12.8",
    "syrupy==4.6.1",
]

[tool.ruff]
# Exclude patterns
extend-exclude = ["change-propagation-tool", "omrchecker-js"]

# Linting rules
[tool.ruff.lint]
ignore = [
    "D212",    # Multi-line docstring summary should start at the first line
    "D415",    # First line should end with punctuation
    "C901",    # Function is too complex
    "PLR0912", # Too many branches
    "PERF401", # Use list comprehension (we prefer readability)
    "PTH123",  # Use Path.open() (open() is fine for our use case)
    "S607",    # Starting process with partial path (git is safe)
    "S603",    # subprocess call (we control the input)
    "S108",    # Insecure temp file (acceptable for internal tooling)
    "ARG001",  # Unused function argument (needed for interface)
    "ARG002",  # Unused method argument (needed for interface)
    "PLW2901", # Loop variable overwritten (intentional)
    "TRY300",  # Consider moving to else block (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E722"]  # Bare except acceptable in scripts
