[project]
name = "OMRChecker"
version = "1.0.0"
description = "Read OMR sheets fast and accurately using a scanner or your phone."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "deepmerge>=1.1.0",
  "dotmap>=1.3.30",
  "jsonschema>=4.17.3",
  "matplotlib>=3.7.1",
  "numpy>=1.25.0",
  "opencv-contrib-python>=4.6.0",
  "opencv-python>=4.6.0",
  "pandas>=2.0.2",
  "rich>=13.4.2",
  "screeninfo>=0.8.1",
]

[dependency-groups]
dev = [
  "flake8>=6.0.0",
  "freezegun>=1.2.2",
  "pre-commit>=3.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.11.1",
  "pytest>=7.4.0",
  "ruff>=0.5.0",
  "syrupy>=4.0.4",
]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37']
